Binary Tree Level Order Traversal

--- a/CodePractice/CodePractice.csproj
+++ b/CodePractice/CodePractice.csproj
@@ -42,7 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Amazon\Careercup\BinaryTreeZigZagLevelOrder.cs" />
     <Compile Include="Amazon\Careercup\CreateBalancedBSTfromSortedArray.cs" />
+    <Compile Include="Amazon\Careercup\CreateBinaryTreeFromSortedArray.cs" />
     <Compile Include="Amazon\Careercup\ReverseDoublyLinkedList.cs" />
     <Compile Include="Amazon\Careercup\SortMatrix.cs" />
     <Compile Include="Amazon\Careercup\SortStringArray.cs" />
@@ -68,6 +70,7 @@
     <Compile Include="CSharp\Threading\VanillaStyle.cs" />
     <Compile Include="DatastructuresAndAlgorithms\Algorithms\Balanced BST\AATree.cs" />
     <Compile Include="DatastructuresAndAlgorithms\Algorithms\Balanced BST\AvlTree.cs" />
+    <Compile Include="DatastructuresAndAlgorithms\Algorithms\BinaryTree\BinaryTree.cs" />
     <Compile Include="DatastructuresAndAlgorithms\Algorithms\Graph\DepthFirstSearch.cs" />
     <Compile Include="DatastructuresAndAlgorithms\Algorithms\Graph\Graph.cs" />
     <Compile Include="DatastructuresAndAlgorithms\Algorithms\Graph\DIjkstra.cs" />
