--- a/CodePractice/CodePractice.csproj
+++ b/CodePractice/CodePractice.csproj
@@ -103,6 +103,8 @@
     <Compile Include="DatastructuresAndAlgorithms\Problems\LinkedList\SkipKElementsAndReverse.cs" />
     <Compile Include="DatastructuresAndAlgorithms\Problems\LinkedList\SwapKthNodeFromStartToEnd.cs" />
     <Compile Include="DatastructuresAndAlgorithms\Problems\Stack\BalancedBracesChecker.cs" />
+    <Compile Include="GeeksForGeeks\PrintLeftViewOfBinaryTree.cs" />
+    <Compile Include="GeeksForGeeks\PrintRightViewOfBinaryTree.cs" />
     <Compile Include="HackerRank\Arrays and Sorting\AlgorithmicCrush.cs" />
     <Compile Include="HackerRank\Arrays and Sorting\AlmostSortedInterval.cs" />
     <Compile Include="HackerRank\Arrays and Sorting\BusStation.cs" />
