Serialize and Deserialize a BST

--- a/CodePractice/CodePractice.csproj
+++ b/CodePractice/CodePractice.csproj
@@ -108,6 +108,7 @@
     <Compile Include="GeeksForGeeks\PrintLeftViewOfBinaryTree.cs" />
     <Compile Include="GeeksForGeeks\PrintRightViewOfBinaryTree.cs" />
     <Compile Include="GeeksForGeeks\SerializeAndDeserializeABinaryTree.cs" />
+    <Compile Include="GeeksForGeeks\SerializeAndDeserializeABST.cs" />
     <Compile Include="HackerRank\Arrays and Sorting\AlgorithmicCrush.cs" />
     <Compile Include="HackerRank\Arrays and Sorting\AlmostSortedInterval.cs" />
     <Compile Include="HackerRank\Arrays and Sorting\BusStation.cs" />
