Refactoring folder structure

--- a/CodePractice/CodePractice.csproj
+++ b/CodePractice/CodePractice.csproj
@@ -103,14 +103,15 @@
     <Compile Include="DatastructuresAndAlgorithms\Problems\LinkedList\SkipKElementsAndReverse.cs" />
     <Compile Include="DatastructuresAndAlgorithms\Problems\LinkedList\SwapKthNodeFromStartToEnd.cs" />
     <Compile Include="DatastructuresAndAlgorithms\Problems\Stack\BalancedBracesChecker.cs" />
-    <Compile Include="GeeksForGeeks\CheckIfBinaryTreeIsBST.cs" />
-    <Compile Include="GeeksForGeeks\PrintBottomViewOfBinaryTree.cs" />
-    <Compile Include="GeeksForGeeks\PrintLeftViewOfBinaryTree.cs" />
-    <Compile Include="GeeksForGeeks\PrintRightViewOfBinaryTree.cs" />
-    <Compile Include="GeeksForGeeks\ReverseLevelOrder.cs" />
-    <Compile Include="GeeksForGeeks\SerializeAndDeserializeABinaryTree.cs" />
-    <Compile Include="GeeksForGeeks\SerializeAndDeserializeABSTWithoutRecursion.cs" />
-    <Compile Include="GeeksForGeeks\SerializeAndDeserializeABST.cs" />
+    <Compile Include="GeeksForGeeks\BinaryTree\BoundaryTraversal.cs" />
+    <Compile Include="GeeksForGeeks\BinarySearchTree\CheckIfBinaryTreeIsBST.cs" />
+    <Compile Include="GeeksForGeeks\BinaryTree\PrintBottomViewOfBinaryTree.cs" />
+    <Compile Include="GeeksForGeeks\BinaryTree\PrintLeftViewOfBinaryTree.cs" />
+    <Compile Include="GeeksForGeeks\BinaryTree\PrintRightViewOfBinaryTree.cs" />
+    <Compile Include="GeeksForGeeks\BinaryTree\ReverseLevelOrder.cs" />
+    <Compile Include="GeeksForGeeks\BinaryTree\SerializeAndDeserializeABinaryTree.cs" />
+    <Compile Include="GeeksForGeeks\BinarySearchTree\SerializeAndDeserializeABSTWithoutRecursion.cs" />
+    <Compile Include="GeeksForGeeks\BinarySearchTree\SerializeAndDeserializeABST.cs" />
     <Compile Include="HackerRank\Arrays and Sorting\AlgorithmicCrush.cs" />
     <Compile Include="HackerRank\Arrays and Sorting\AlmostSortedInterval.cs" />
     <Compile Include="HackerRank\Arrays and Sorting\BusStation.cs" />
