--- a/CodePractice/CodePractice.csproj
+++ b/CodePractice/CodePractice.csproj
@@ -43,12 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Amazon\Careercup\BinaryTreeZigZagLevelOrder.cs" />
-    <Compile Include="Amazon\Careercup\CreateBalancedBSTfromSortedArray.cs" />
-    <Compile Include="Amazon\Careercup\CreateBinaryTreeFromSortedArray.cs" />
-    <Compile Include="Amazon\Careercup\ReverseDoublyLinkedList.cs" />
-    <Compile Include="Amazon\Careercup\SortMatrix.cs" />
-    <Compile Include="Amazon\Careercup\SortStringArray.cs" />
+    <Compile Include="Arrays\_FindSubArrayWithGivenSum.cs" />
+    <Compile Include="Trees\BinaryTree\BinaryTreeZigZagLevelOrder.cs" />
+    <Compile Include="Trees\BalancedBST\CreateBalancedBSTfromSortedArray.cs" />
+    <Compile Include="Trees\BinaryTree\CreateBinaryTreeFromSortedArray.cs" />
+    <Compile Include="LinkedList\DoublyLinkedList\ReverseDoublyLinkedList.cs" />
+    <Compile Include="Matrix\SortMatrix.cs" />
+    <Compile Include="Arrays\SortStringArray.cs" />
     <Compile Include="BitManipulation\ClosestNeighbourByWeight.cs" />
     <Compile Include="BitManipulation\CheckIntegerIs2PowerX.cs" />
     <Compile Include="BitManipulation\FindAbsoluteValue.cs" />
@@ -74,7 +75,7 @@
     <Compile Include="Codility\Equillibrium.cs" />
     <Compile Include="Codility\FindBiggestTriangle.cs" />
     <Compile Include="Codility\FindCubeRoots.cs" />
-    <Compile Include="CodingInterviews\SearchIn2DMatrix.cs" />
+    <Compile Include="Matrix\SearchIn2DMatrix.cs" />
     <Compile Include="CSharp\CapturedVariables.cs" />
     <Compile Include="CSharp\DeepVsShallowCopy.cs" />
     <Compile Include="CSharp\Interfaces.cs" />
@@ -105,44 +106,44 @@
     <Compile Include="DatastructuresAndAlgorithms\Algorithms\PriorityQueue\MinPQ.cs" />
     <Compile Include="DatastructuresAndAlgorithms\Algorithms\Sorting\QuickSort.cs" />
     <Compile Include="DatastructuresAndAlgorithms\Algorithms\Sorting\RadixSort.cs" />
-    <Compile Include="DatastructuresAndAlgorithms\Problems\Arrays\FindConsecutiveNumbersThatAddToN.cs" />
-    <Compile Include="CodingInterviews\FindDuplicateNumbers.cs" />
-    <Compile Include="DatastructuresAndAlgorithms\Problems\Arrays\FindMaxConsecutiveSubArray.cs" />
-    <Compile Include="DatastructuresAndAlgorithms\Problems\Arrays\FindSubsequenceThatAddsToGivenSum.cs" />
-    <Compile Include="DatastructuresAndAlgorithms\Problems\Arrays\PrintSubArrayWithGivenSum.cs" />
-    <Compile Include="DatastructuresAndAlgorithms\Problems\LinkedList\CheckPalindrome.cs" />
-    <Compile Include="DatastructuresAndAlgorithms\Problems\LinkedList\FindElementFromEnd.cs" />
-    <Compile Include="DatastructuresAndAlgorithms\Problems\LinkedList\FindLoopEntry.cs" />
-    <Compile Include="DatastructuresAndAlgorithms\Problems\LinkedList\FindLoopPresence.cs" />
-    <Compile Include="DatastructuresAndAlgorithms\Problems\LinkedList\FindMiddleElementInSinglePass.cs" />
-    <Compile Include="DatastructuresAndAlgorithms\Problems\LinkedList\FindPresenceOfLoops.cs" />
+    <Compile Include="Arrays\FindConsecutiveNumbersThatAddToN.cs" />
+    <Compile Include="Arrays\FindDuplicateNumbers.cs" />
+    <Compile Include="Arrays\FindMaxConsecutiveSubArray.cs" />
+    <Compile Include="Arrays\FindSubsequenceThatAddsToGivenSum.cs" />
+    <Compile Include="Arrays\PrintSubArrayWithGivenSum.cs" />
+    <Compile Include="LinkedList\CheckPalindrome.cs" />
+    <Compile Include="LinkedList\FindElementFromEnd.cs" />
+    <Compile Include="LinkedList\FindLoopEntry.cs" />
+    <Compile Include="LinkedList\FindLoopPresence.cs" />
+    <Compile Include="LinkedList\FindMiddleElementInSinglePass.cs" />
+    <Compile Include="LinkedList\FindPresenceOfLoops.cs" />
     <Compile Include="DatastructuresAndAlgorithms\Algorithms\LinkedList\JabzLinkedList.cs" />
-    <Compile Include="DatastructuresAndAlgorithms\Problems\LinkedList\ReverseCompleteList.cs" />
-    <Compile Include="DatastructuresAndAlgorithms\Problems\LinkedList\ReverseEveryKElements.cs" />
-    <Compile Include="DatastructuresAndAlgorithms\Problems\LinkedList\ReverseListUsingRecursion.cs" />
-    <Compile Include="DatastructuresAndAlgorithms\Problems\LinkedList\SkipKElementsAndReverse.cs" />
-    <Compile Include="DatastructuresAndAlgorithms\Problems\LinkedList\SwapKthNodeFromStartToEnd.cs" />
-    <Compile Include="DatastructuresAndAlgorithms\Problems\Stack\BalancedBracesChecker.cs" />
+    <Compile Include="LinkedList\ReverseCompleteList.cs" />
+    <Compile Include="LinkedList\ReverseEveryKElements.cs" />
+    <Compile Include="LinkedList\ReverseListUsingRecursion.cs" />
+    <Compile Include="LinkedList\SkipKElementsAndReverse.cs" />
+    <Compile Include="LinkedList\SwapKthNodeFromStartToEnd.cs" />
+    <Compile Include="Stack\BalancedBracesChecker.cs" />
     <Compile Include="DesignPatterns\ObserverDP.cs" />
     <Compile Include="Design\FlightBooking\FlightClient.cs" />
     <Compile Include="Design\FlightBooking\FlightBuilder.cs" />
     <Compile Include="Design\FlightBooking\FlightFilter.cs" />
     <Compile Include="DynamicProgramming\KnapSack.cs" />
     <Compile Include="BitManipulation\ComputeParity.cs" />
-    <Compile Include="GeeksForGeeks\BinarySearchTree\CreateBSTFromSortedDoublyLinkedList.cs" />
-    <Compile Include="GeeksForGeeks\BinarySearchTree\CreateBSTFromSortedLinkedList.cs" />
-    <Compile Include="GeeksForGeeks\BinaryTree\BinaryTreeTraversalWithoutRecursion.cs" />
-    <Compile Include="GeeksForGeeks\BinaryTree\BoundaryTraversal.cs" />
-    <Compile Include="GeeksForGeeks\BinarySearchTree\CheckIfBinaryTreeIsBST.cs" />
-    <Compile Include="GeeksForGeeks\BinaryTree\MaxDepthofBinaryTree.cs" />
-    <Compile Include="GeeksForGeeks\BinaryTree\PrintBottomViewOfBinaryTree.cs" />
-    <Compile Include="GeeksForGeeks\BinaryTree\PrintLeftViewOfBinaryTree.cs" />
-    <Compile Include="GeeksForGeeks\BinaryTree\PrintRightViewOfBinaryTree.cs" />
-    <Compile Include="GeeksForGeeks\BinaryTree\ReverseLevelOrder.cs" />
-    <Compile Include="GeeksForGeeks\BinaryTree\SerializeAndDeserializeABinaryTree.cs" />
-    <Compile Include="GeeksForGeeks\BinarySearchTree\SerializeAndDeserializeABSTWithoutRecursion.cs" />
-    <Compile Include="GeeksForGeeks\BinarySearchTree\SerializeAndDeserializeABST.cs" />
-    <Compile Include="GeeksForGeeks\BinaryTree\VerticalOrderTraversal.cs" />
+    <Compile Include="Trees\BST\CreateBSTFromSortedDoublyLinkedList.cs" />
+    <Compile Include="Trees\BST\CreateBSTFromSortedLinkedList.cs" />
+    <Compile Include="Trees\BinaryTree\BinaryTreeTraversalWithoutRecursion.cs" />
+    <Compile Include="Trees\BinaryTree\_BoundaryTraversal.cs" />
+    <Compile Include="Trees\BST\CheckIfBinaryTreeIsBST.cs" />
+    <Compile Include="Trees\BinaryTree\MaxDepthofBinaryTree.cs" />
+    <Compile Include="Trees\BinaryTree\_PrintBottomViewOfBinaryTree.cs" />
+    <Compile Include="Trees\BinaryTree\PrintLeftViewOfBinaryTree.cs" />
+    <Compile Include="Trees\BinaryTree\PrintRightViewOfBinaryTree.cs" />
+    <Compile Include="Trees\BinaryTree\ReverseLevelOrder.cs" />
+    <Compile Include="Trees\BinaryTree\SerializeAndDeserializeABinaryTree.cs" />
+    <Compile Include="Trees\BST\SerializeAndDeserializeABSTWithoutRecursion.cs" />
+    <Compile Include="Trees\BST\SerializeAndDeserializeABST.cs" />
+    <Compile Include="Trees\BinaryTree\_VerticalOrderTraversal.cs" />
     <Compile Include="HackerRank\Arrays and Sorting\AlgorithmicCrush.cs" />
     <Compile Include="HackerRank\Arrays and Sorting\AlmostSortedInterval.cs" />
     <Compile Include="HackerRank\Arrays and Sorting\BusStation.cs" />
