--- a/CodePractice.Tests/CodePractice.Tests.csproj
+++ b/CodePractice.Tests/CodePractice.Tests.csproj
@@ -53,7 +53,9 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Design\TautologyTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Design\SkyCastTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CodePractice\CodePractice.csproj">
