--- a/CodePractice/CodePractice.csproj
+++ b/CodePractice/CodePractice.csproj
@@ -51,13 +51,17 @@
     <Compile Include="Design\SkyCast\Contracts\IBinarySearchHelper.cs" />
     <Compile Include="Design\SkyCast\MasterBrain.cs" />
     <Compile Include="Design\Tautology\BruteForcePropositionalEngine.cs" />
-    <Compile Include="Design\Tautology\ExpressionConvertor.cs" />
+    <Compile Include="Design\Tautology\ShuntingYardConvertor.cs" />
     <Compile Include="Design\Tautology\Contracts\IExpressionConvertor.cs" />
     <Compile Include="Design\Tautology\ExpressionEvaluator.cs" />
     <Compile Include="Design\Tautology\Contracts\IExpressionEvaluator.cs" />
     <Compile Include="Design\Tautology\Contracts\IPropositionalEngine.cs" />
+    <Compile Include="Design\Tautology\EBNFConvertor.cs" />
     <Compile Include="Design\Tautology\Model\PositionalStatement.cs" />
     <Compile Include="Design\Tautology\OptimizedPropositionalEngine.cs" />
+    <Compile Include="Design\Tautology\Utilities\Constants.cs" />
+    <Compile Include="Design\Tautology\Utilities\StringExtensions.cs" />
+    <Compile Include="Design\Tautology\Utilities\TokenEnumerator.cs" />
     <Compile Include="Trees\BinaryTree\BinaryTreeZigZagLevelOrder.cs" />
     <Compile Include="Trees\BalancedBST\CreateBalancedBSTfromSortedArray.cs" />
     <Compile Include="Trees\BinaryTree\CreateBinaryTreeFromSortedArray.cs" />
