--- a/CodePractice/CodePractice.csproj
+++ b/CodePractice/CodePractice.csproj
@@ -51,12 +51,19 @@
     <Compile Include="Design\SkyCast\Contracts\IBinarySearchHelper.cs" />
     <Compile Include="Design\SkyCast\MasterBrain.cs" />
     <Compile Include="Design\Tautology\BruteForcePropositionalEngine.cs" />
-    <Compile Include="Design\Tautology\ShuntingYardConvertor.cs" />
+    <Compile Include="Design\Tautology\Contracts\IPositionalStatement.cs" />
+    <Compile Include="Design\Tautology\Contracts\IPositionalTreeBuilder.cs" />
+    <Compile Include="Design\Tautology\Contracts\ITautologyOperator.cs" />
+    <Compile Include="Design\Tautology\Service\LogicalAndOperator.cs" />
+    <Compile Include="Design\Tautology\Service\LogicalOrOperator.cs" />
+    <Compile Include="Design\Tautology\Service\PositionalTreeBuilder.cs" />
+    <Compile Include="Design\Tautology\RefactoredPropositionalEngine.cs" />
+    <Compile Include="Design\Tautology\Utilities\ShuntingYardConvertor.cs" />
     <Compile Include="Design\Tautology\Contracts\IExpressionConvertor.cs" />
-    <Compile Include="Design\Tautology\ExpressionEvaluator.cs" />
+    <Compile Include="Design\Tautology\Service\ExpressionEvaluator.cs" />
     <Compile Include="Design\Tautology\Contracts\IExpressionEvaluator.cs" />
     <Compile Include="Design\Tautology\Contracts\IPropositionalEngine.cs" />
-    <Compile Include="Design\Tautology\EBNFConvertor.cs" />
+    <Compile Include="Design\Tautology\Utilities\EBNFConvertor.cs" />
     <Compile Include="Design\Tautology\Model\PositionalStatement.cs" />
     <Compile Include="Design\Tautology\OptimizedPropositionalEngine.cs" />
     <Compile Include="Design\Tautology\Utilities\Constants.cs" />
