--- a/Projects/CrossOver/CrossOver.WCFService/Web.config
+++ b/Projects/CrossOver/CrossOver.WCFService/Web.config
@@ -1,29 +1,81 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.5" />
+      </system.Web>
+  -->
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=localhost;Initial Catalog=CrossOver;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
-    <compilation debug="true" targetFramework="4.0" />
+    <compilation debug="true" targetFramework="4.5" />
+    <pages controlRenderingCompatibilityVersion="4.0" />
   </system.web>
   <system.serviceModel>
+    <extensions>
+      <behaviorExtensions>
+        <add name="ErrorLogging" type="CrossOver.WCFService.ErrorHandlerBehavior, CrossOver.WCFService, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+      </behaviorExtensions>
+    </extensions>
+    <services>
+      <service name="CrossOver.WCFService.RestfulNewsFeedService">
+        <endpoint address="" behaviorConfiguration="restfulBehavior"
+                  binding="webHttpBinding" bindingConfiguration=""
+                  contract="CrossOver.WCFService.IRestfulNewsFeedService">
+        </endpoint>
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:64163/"/>
+          </baseAddresses>
+        </host>
+      </service>
+    </services>
     <behaviors>
+      <endpointBehaviors>
+        <behavior name="restfulBehavior">
+          <webHttp helpEnabled="true" defaultOutgoingResponseFormat="Xml"/>
+        </behavior>
+      </endpointBehaviors>
       <serviceBehaviors>
         <behavior>
           <!-- To avoid disclosing metadata information, set the value below to false before deployment -->
-          <serviceMetadata httpGetEnabled="true"/>
+          <serviceMetadata httpGetEnabled="true" />
           <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
-          <serviceDebug includeExceptionDetailInFaults="false"/>
+          <serviceDebug includeExceptionDetailInFaults="false" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
-    <serviceHostingEnvironment multipleSiteBindingsEnabled="true" />
+    <serviceHostingEnvironment multipleSiteBindingsEnabled="true">
+      <serviceActivations>
+        <!--Dependency injection using Unity-->
+        <!--<add factory="CrossOver.DependencyResolution.WcfServiceFactory" relativeAddress="RssNewsFeedService.svc" service="CrossOver.WCFService.RssNewsFeedService" />-->
+        <!--<add factory="CrossOver.DependencyResolution.WcfServiceFactory" relativeAddress="RestfulNewsFeedService.svc" service="CrossOver.WCFService.RestfulNewsFeedService" />-->
+      </serviceActivations>
+    </serviceHostingEnvironment>
+    
   </system.serviceModel>
- <system.webServer>
-    <modules runAllManagedModulesForAllRequests="true"/>
+  <system.webServer>
+    <modules runAllManagedModulesForAllRequests="true" />
     <!--
         To browse web app root directory during debugging, set the value below to true.
         Set to false before deployment to avoid disclosing web app folder information.
       -->
-    <directoryBrowse enabled="true"/>
+    <directoryBrowse enabled="true" />
   </system.webServer>
-
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Practices.Unity" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.5.0.0" newVersion="3.5.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
