--- a/Projects/CrossOver/CrossOver.DependencyResolution/packages.config
+++ b/Projects/CrossOver/CrossOver.DependencyResolution/packages.config
@@ -8,5 +8,6 @@
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net40" requireReinstallation="True" />
   <package id="Unity" version="3.5.1404.0" targetFramework="net45" />
   <package id="Unity.Mvc" version="3.5.1404.0" targetFramework="net45" />
+  <package id="Unity.Wcf" version="1.0.0" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net45" />
 </packages>
