--- a/Projects/CrossOver/CrossOver.WCFService/CrossOver.WCFService.csproj
+++ b/Projects/CrossOver/CrossOver.WCFService/CrossOver.WCFService.csproj
@@ -13,13 +13,14 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CrossOver.WCFService</RootNamespace>
     <AssemblyName>CrossOver.WCFService</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <WcfConfigValidationEnabled>True</WcfConfigValidationEnabled>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -29,6 +30,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -37,15 +39,26 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.Practices.Unity, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.Configuration">
+      <HintPath>..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.Configuration.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.RegistrationByConvention">
+      <HintPath>..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
-    <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.EnterpriseServices" />
@@ -59,26 +72,56 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Service1.svc" />
+    <Content Include="RestfulNewsFeedService.svc" />
+    <Content Include="RssNewsFeedService.svc" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Service1.svc.cs">
-      <DependentUpon>Service1.svc</DependentUpon>
+    <Compile Include="DTO\NewsFeed.cs" />
+    <Compile Include="ErrorHandling.cs" />
+    <Compile Include="IRestfulNewsFeedService.cs" />
+    <Compile Include="RestfulNewsFeedService.svc.cs">
+      <DependentUpon>RestfulNewsFeedService.svc</DependentUpon>
     </Compile>
-    <Compile Include="IService1.cs" />
+    <Compile Include="RssNewsFeedService.svc.cs">
+      <DependentUpon>RssNewsFeedService.svc</DependentUpon>
+    </Compile>
+    <Compile Include="IRssNewsFeedService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CrossOver.Contracts\CrossOver.Contracts.csproj">
+      <Project>{0f4aa839-8443-4a7e-b4d0-f24a472f876d}</Project>
+      <Name>CrossOver.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CrossOver.DependencyResolution\CrossOver.DependencyResolution.csproj">
+      <Project>{d4802452-beca-4720-ac2a-adbdfe4125e9}</Project>
+      <Name>CrossOver.DependencyResolution</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CrossOver.Models\CrossOver.Models.csproj">
+      <Project>{b5ace767-e55a-4e60-9843-71d8570f5d1f}</Project>
+      <Name>CrossOver.Models</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CrossOver.Repositories\CrossOver.Repositories.csproj">
+      <Project>{1359157f-e797-4423-8501-5fa02c59b90f}</Project>
+      <Name>CrossOver.Repositories</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CrossOver.Services\CrossOver.Services.csproj">
+      <Project>{11b9f1a7-fc45-4e11-b3f7-e9d5987ca735}</Project>
+      <Name>CrossOver.Services</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
